# memcachedbNG

./: Makefile.am  README.md  assoc.c  assoc.h  bdb.c  config.h  configure.ac  delay_log.c  delay_log.h  item.c  jenkins_hash.c  jenkins_hash.h  memcachedb.c  memcachedb.h  rebuildconf  shm.c  shm_api.h  stats.c  test.sh  thread.c
doc/: ._protocol.txt  ._rget.txt  Makefile.am  rget.txt
tools/: ._mcben.py  ._mdbtest.py  ._mdbtop.py  ._memcache.py  Makefile.am  mdbtest.py  memcache.py
